@@ -53,6 +53,13 @@ const listNodeStyle = (
   return listNodeStyle;
 };
 
+const resizeHandleStyle = (theme: Theme): React.CSSProperties => {
+  return {
+    width: theme.spacing(0.75),
+    height: theme.spacing(0.75),
+  };
+};
+
 export const ListNode = memo(({ data, id, selected }: NodeProps<ListNodeData>) => {
   const theme = useTheme();
   const { onDrop, onDragOver } = useDrop();
@@ -69,6 +76,7 @@ export const ListNode = memo(({ data, id, selected }: NodeProps<ListNodeData>) =
     <>
       {data.nodeDescription?.userResizable && (
         <NodeResizer
+          handleStyle={{ ...resizeHandleStyle(theme) }}
           color={theme.palette.selected}
           isVisible={selected}
           shouldResize={() => !data.isBorderNode}
